# Task_List_DZ

./: .gitignore  pyproject.toml
src/: main.py
src/data/: Text.txt
