[tool.poetry]
name = "task-list-dz"
version = "0.1.0"
description = ""
authors = ["MaxZ <maxzonoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
